@@ -4,6 +4,8 @@ include /usr/share/cdbs/1/rules/debhelper.mk
 include /usr/share/cdbs/1/class/autotools.mk
 include /usr/share/cdbs/1/rules/dpatch.mk
 
+DEB_CONFIGURE_EXTRA_FLAGS = --enable-krb5-locator-plugin
+
 install/libnss-sss::
 	mkdir -p $(CURDIR)/debian/tmp/lib/
 	mv $(CURDIR)/debian/tmp/usr/lib/libnss_sss.so.2 $(CURDIR)/debian/tmp/lib/libnss_sss.so.2
@@ -18,13 +20,13 @@ install/libpam-sss::
 		$(CURDIR)/debian/libpam-sss/usr/share/pam-configs/sssd
 
 install/sssd::
-	install -D -m640 $(CURDIR)/server/config/etc/sssd.api.conf $(CURDIR)/debian/sssd/etc/sssd/sssd.api.conf
+	install -D -m640 $(CURDIR)/src/config/etc/sssd.api.conf $(CURDIR)/debian/sssd/etc/sssd/sssd.api.conf
 	mkdir -p $(CURDIR)/debian/sssd/etc/sssd/sssd.api.d/
-	install -m640 $(CURDIR)/server/config/etc/sssd.api.d/* $(CURDIR)/debian/sssd/etc/sssd/sssd.api.d/ 
+	install -m640 $(CURDIR)/src/config/etc/sssd.api.d/* $(CURDIR)/debian/sssd/etc/sssd/sssd.api.d/ 
 
 binary-install/python-sss::
 	find $(CURDIR)/debian/python-sss/ -name '*.la' -exec rm '{}' ';'
 	dh_pycentral -ppython-sss
 
 clean::
-	rm -f server/config/.files
+	rm -f src/config/.files
