@@ -1,1 +1,1 @@
-server/examples/sssd.conf
+src/examples/sssd.conf
